--- a/index.html
+++ b/index.html
@@ -3,25 +3,197 @@
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 
-    <title>Hello, world!</title>
+    <title>Qmak WPU</title>
   </head>
-  <body>
-    <h1>Hello, world!</h1>
+  <body class="my-5">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary">
+        <div class="container">
+                <a class="navbar-brand" href="#">BagasQmak</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                  <div class="navbar-nav">
+                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link" href="#">About Me</a>
+                    <a class="nav-link" href="#">Portfolio</a>
+                    <a class="nav-link" href="#">Contact</a>
+                  </div>
+                </div>
+        </div>
+      </nav>
+
+      <div class="jumbotron jumbotron-fluid">
+        <div class="container text-center">
+            <img src="img/profile1.png" width="25%" class="rounded-circle img-thumbnail">
+            <h1 class="display-4">BagasQmak</h1>
+            <p class="lead">Do what you love, Love what you do<p>
+        </div>
+      </div>
+
+      <section id="about" class="about">
+        <div class="container">
+            <div class="row mb-4">
+                <div class="col text-center">
+                    <h2>About</h2>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-md-5 text-center">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo voluptatibus voluptate asperiores sunt hic temporibus, quasi sequi obcaecati dolor repellendus esse deleniti, tempore veniam corrupti facilis at totam nisi libero.</p>
+                </div>
+                <div class="col-md-5 text-center">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi earum, ipsam nulla sit doloribus aperiam ipsum quis officiis inventore perspiciatis quibusdam voluptate dolor saepe unde autem nam possimus itaque consectetur.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    
+    <section id="portfolio" class="portfolio bg-light pb-4">
+      <div class="container">
+          <div class="row mb-4 pt-4">
+              <div class="col text-center">
+                  <h2>Portfolio</h2>
+              </div>
+          </div>
+          <div class="row mb-4">
+            <div class="col-md">
+                <div class="card">
+                    <img src="img/thumbs/1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div> 
+            <div class="col-md">
+                <div class="card">
+                    <img src="img/thumbs/2.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md">
+                <div class="card">
+                    <img src="img/thumbs/3.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div> 
+          </div>
+
+          <div class="row mb-4">
+            <div class="col-md">
+                <div class="card">
+                    <img src="img/thumbs/4.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div> 
+            <div class="col-md">
+                <div class="card">
+                    <img src="img/thumbs/5.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md">
+                <div class="card">
+                    <img src="img/thumbs/6.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div> 
+          </div>
+      </div>
+    </section>
+
+    <section id="contact" class="contact mb-5">
+        <div class="container">
+            <div class="row pt-4 mb-4">
+                <div class="col text-center">
+                    <h2>Contact Me</h2>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-lg-4">
+                    <div class="card text-white bg-primary mb-3 text-center">
+                        <div class="card-body">
+                          <h5 class="card-title">Contact Me</h5>
+                          <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi error enim velit, pariatur impedit ad</p>
+                        </div>
+                    </div>
+                    <ul class="list-group">
+                        <li class="list-group-item"><h1>Location</h1></li>
+                        <li class="list-group-item">My Home</li>
+                        <li class="list-group-item">Jl Braga marga satwa</li>
+                        <li class="list-group-item">Bandung, Indonesia</li>
+                      </ul>
+                </div>
+                <div class="col-lg-6">
+                    <form>
+                        <div class="form-group">
+                          <label for="nama">Nama</label>
+                          <input type="text" class="form-control" id="nama">
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Email</label>
+                            <input type="text" class="form-control" id="email">
+                        </div>
+                        <div class="form-group">
+                            <label for="notlp">Nomor Telepon</label>
+                            <input type="text" class="form-control" id="notlp">
+                          </div>
+                        <div class="form-group">
+                            <label for="pesan">Pesan</label>
+                            <textarea name="pesan" id="pesan" class="form-control"></textarea>
+                        </div>
+                        <div class="form-group">
+                            <button type="button" class="btn btn-primary">Kirim Pesan</button>
+                        </div>
+                      </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <footer class="bg-primary text-white">
+        <div class="container">
+            <div class="row pt-3">
+                <div class="col text-center">
+                    <p>Copyright 2021</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+
+
+
+
 
     <!-- Optional JavaScript; choose one of the two! -->
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
     -->
   </body>
 </html>
