--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 
-    <title>Qmak WPU</title>
+    <title>Latihan Qmak Portfolio</title>
   </head>
   <body class="my-5">
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary">
-        <div class="container">
-                <a class="navbar-brand" href="#">BagasQmak</a>
+        <div class="container d-flex">
+                <a class="navbar-brand" href="#">Bagasqmak</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                  <div class="navbar-nav">
+                  <div class="navbar-nav justify-content-end">
                     <a class="nav-link" href="#">Home</a>
                     <a class="nav-link" href="#">About Me</a>
                     <a class="nav-link" href="#">Portfolio</a>
